<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#0DA5DF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:layout_weight="0"
        android:fontFamily="@font/knewave"
        android:gravity="center_horizontal"
        android:text="@string/title_consulta"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/usuarioConsulta"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20px"
        android:layout_weight="0"
        android:ems="10"
        android:fontFamily="@font/knewave"
        android:gravity="center_horizontal"
        android:hint="@string/hint_view_usuario"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:layout_weight="0"
        android:backgroundTint="#003B4A"
        android:fontFamily="@font/knewave"
        android:text="@string/btn_verpartidas"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="5px" />

    <TextView
        android:id="@+id/lblConsulta"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_weight="0"
        android:fontFamily="@font/knewave"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleJugadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/knewave"
            android:gravity="center_horizontal"
            android:text="@string/title_jugadores"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lblJugadores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10px"
            android:fontFamily="@font/knewave"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>