<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagenAhorcado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40px"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/palabraAhorcado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:layout_marginBottom="20px"
            android:fontFamily="@font/knewave"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/lblLetra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:fontFamily="@font/knewave"
            android:gravity="center"
            android:hint="LETRA"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btncogerLetra"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="20px"
            android:layout_marginTop="40px"
            android:layout_marginRight="20px"
            android:layout_weight="0"
            android:backgroundTint="#003B4A"
            android:fontFamily="@font/knewave"
            android:text="@string/envio_letra"
            android:textSize="20sp"
            app:strokeColor="#000000"
            app:strokeWidth="7px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleNoEncontradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100px"
            android:background="#FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/knewave"
            android:gravity="center"
            android:text="@string/letras_noencontradas"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblLetrasUsadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40px"
            android:background="#FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/knewave"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleEncontradas"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:background="#808080"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/knewave"
            android:gravity="center"
            android:text="@string/letras_encontradas"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/letrasEncontradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40px"
            android:background="#FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:fontFamily="@font/knewave"
            android:gravity="center|center_horizontal"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>